--- a/main.html
+++ b/main.html
@@ -7,6 +7,21 @@
 </head>
 
 <body>
+	<div>
+		<h3>What is the captial of India?</h3>
+
+		<lable>
+			<input type="radio" name="capital" value="New Delhi">New Delhi
+		</lable><br>
+		<lable>
+			<input type="radio" name="capital" value="Mumbai">Mumbai
+		</lable>
+		
+	</div>
+
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+		New Delhi is the capital of India and an administrative district of NCT Delhi.
+	</blockquote>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
